--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tpk_login_v2
+name: qc_ui
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
