--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_master",
-    "short_name": "flutter_master",
+    "name": "newmaster",
+    "short_name": "newmaster",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
