--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_master">
+    package="com.example.newmaster">
    <application
-        android:label="flutter_master"
+        android:label="newmaster"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
