--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^0.8.6
   intl: ^0.17.0
   image: ^3.2.2
+  hydrated_bloc: ^9.0.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
