--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.1
-  shared_preferences: ^2.0.15
-  file_picker: ^6.1.1
-  image_picker: ^1.0.7
+  flutter_bloc: ^8.0.1
+  shared_preferences: ^2.0.13
   intl: ^0.19.0
-  image: ^4.1.7
-  hydrated_bloc: ^9.0.0
-  path_provider: ^2.0.11
+
+  file_picker: ^8.1.3
+  image: ^4.3.0
+  back_button_interceptor: ^7.0.3
+  csv: ^6.0.0
+  pdf: ^3.8.4
+  fl_chart: ^0.69.0
+  dio: ^5.8.0+1
+  lottie: ^3.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
